[gd_scene load_steps=23 format=4 uid="uid://c5ds1gbyf4iit"]

[ext_resource type="Script" uid="uid://b35ax3d027tq5" path="res://MainMenu/main_menu.gd" id="1_hy30b"]
[ext_resource type="Texture2D" uid="uid://coepahhdrkhhr" path="res://MainMenu/BackgroundTexture.svg" id="2_3w4mj"]
[ext_resource type="Texture2D" uid="uid://1om1xoukgi4l" path="res://MainMenu/CharacterSelect/CharacterSelectTileset.svg" id="3_5de1l"]
[ext_resource type="Script" uid="uid://bxtwe3vmh1r3t" path="res://MainMenu/CharacterSelect/character_selection.gd" id="3_ajn5b"]
[ext_resource type="Script" uid="uid://do7c0otvtn8cf" path="res://MainMenu/CharacterSelect/character_select_snake_movement.gd" id="5_id3bs"]
[ext_resource type="Texture2D" uid="uid://oivymajq3u0k" path="res://Snake/Head/snake_head_placeholder.svg" id="6_b3er0"]
[ext_resource type="Texture2D" uid="uid://dqpvcsxdfpwpx" path="res://Snake/Tail/snake_tail_placeholder.svg" id="7_qmlj8"]
[ext_resource type="Texture2D" uid="uid://cw6eviw6ryrd6" path="res://Snake/Body/Sprites/Godoticon/GodoticonCorner.svg" id="8_e240q"]
[ext_resource type="PackedScene" uid="uid://wm1t2vil6cf3" path="res://MainMenu/CharacterSelect/snake_body_char_select.tscn" id="8_r0x8f"]
[ext_resource type="Texture2D" uid="uid://bo81k4ky6bpcx" path="res://Snake/Body/Sprites/Godoticon/GodoticonEdge.svg" id="9_8n28k"]
[ext_resource type="Texture2D" uid="uid://db8iystjruos5" path="res://Snake/Head/PythonHead.svg" id="11_qmlj8"]
[ext_resource type="Texture2D" uid="uid://blke1i7mxvqa4" path="res://Snake/Tail/PythonTail.svg" id="12_e240q"]
[ext_resource type="Texture2D" uid="uid://cun27qgpp0q2v" path="res://Snake/Body/Sprites/Python/PythonEdge.svg" id="13_dbhad"]
[ext_resource type="Texture2D" uid="uid://rh01wewcgxxn" path="res://Snake/Body/Sprites/Python/PythonCorner.svg" id="14_5x28t"]

[sub_resource type="Animation" id="Animation_ajn5b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-556, -492)]
}

[sub_resource type="Animation" id="Animation_5de1l"]
resource_name = "background_scroll_anim"
length = 10.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-106, -42), Vector2(-556, -492)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_po2gx"]
_data = {
&"RESET": SubResource("Animation_ajn5b"),
&"background_scroll_anim": SubResource("Animation_5de1l")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5x28t"]
texture = ExtResource("3_5de1l")
texture_region_size = Vector2i(80, 80)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0

[sub_resource type="TileSet" id="TileSet_gcf2c"]
tile_size = Vector2i(80, 80)
sources/0 = SubResource("TileSetAtlasSource_5x28t")

[sub_resource type="Curve2D" id="Curve2D_t5loh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1480, 600, 0, 0, 0, 0, 1400, 600, 0, 0, 0, 0, 1080, 600, 0, 0, 0, 0, 1080, 520, 0, 0, 0, 0, 840, 520, 0, 0, 0, 0, 760, 520)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_8n28k"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1000, 680, 0, 0, 0, 0, 920, 680, 0, 0, 0, 0, 680, 680, 0, 0, 0, 0, 680, 520, 0, 0, 0, 0, 920, 520, 0, 0, 0, 0, 1000, 520)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_iej5p"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 920, 440, 0, 0, 0, 0, 920, 520, 0, 0, 0, 0, 920, 600, 0, 0, 0, 0, 840, 600, 0, 0, 0, 0, 840, 520, 0, 0, 0, 0, 760, 520, 0, 0, 0, 0, 760, 440, 0, 0, 0, 0, 680, 440, 0, 0, 0, 0, 600, 440, 0, 0, 0, 0, 520, 440, 0, 0, 0, 0, 440, 440)
}
point_count = 11

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_hy30b")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.77, 0.77, 0.77, 1)
offset_left = -556.0
offset_top = -492.0
offset_right = 2186.0
offset_bottom = 1240.0
texture = ExtResource("2_3w4mj")
stretch_mode = 1

[node name="NewRun" type="Button" parent="."]
offset_left = 300.0
offset_top = 700.0
offset_right = 921.0
offset_bottom = 901.0
theme_override_font_sizes/font_size = 141
text = "New Run"

[node name="BackgroundScroll" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_po2gx")
}
autoplay = "background_scroll_anim"

[node name="CharacterSelection" type="Node2D" parent="."]
script = ExtResource("3_ajn5b")

[node name="Character0Select" type="TileMapLayer" parent="CharacterSelection"]
position = Vector2(1120, 600)
tile_map_data = PackedByteArray("AAD9////AAABAAIAAAD+////AAABAAAAAAD/////AAABAAAAAAAAAP//AAACAAAAAAAAAAAAAAAAAAMAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAABAAMAAAA=")
tile_set = SubResource("TileSet_gcf2c")
script = ExtResource("5_id3bs")

[node name="Path2D" type="Path2D" parent="CharacterSelection/Character0Select"]
position = Vector2(-1040, -560)
curve = SubResource("Curve2D_t5loh")

[node name="HeadFollow" type="PathFollow2D" parent="CharacterSelection/Character0Select/Path2D"]
position = Vector2(840, 520)
rotation = 3.14159
progress = 720.0

[node name="Head" type="Sprite2D" parent="CharacterSelection/Character0Select/Path2D/HeadFollow"]
z_index = 11
z_as_relative = false
rotation = 1.5708
texture = ExtResource("6_b3er0")

[node name="TailFollow" type="PathFollow2D" parent="CharacterSelection/Character0Select/Path2D"]
position = Vector2(1400, 600)
rotation = 3.14159
progress = 80.0

[node name="Tail" type="Sprite2D" parent="CharacterSelection/Character0Select/Path2D/TailFollow"]
z_index = 11
z_as_relative = false
rotation = 1.5708
texture = ExtResource("7_qmlj8")

[node name="SnakeBody0" parent="CharacterSelection/Character0Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.62, 1, 0.778333, 1)
position = Vector2(360, 40.0002)
sprite = ExtResource("9_8n28k")

[node name="SnakeBody1" parent="CharacterSelection/Character0Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.62, 1, 0.778333, 1)
position = Vector2(280, 40.0002)
sprite = ExtResource("9_8n28k")

[node name="SnakeBody2" parent="CharacterSelection/Character0Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.62, 1, 0.778333, 1)
position = Vector2(200, 40.0002)
sprite = ExtResource("9_8n28k")

[node name="SnakeBody3" parent="CharacterSelection/Character0Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.62, 1, 0.778333, 1)
position = Vector2(120, 40.0002)
sprite = ExtResource("9_8n28k")

[node name="SnakeBody4" parent="CharacterSelection/Character0Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.62, 1, 0.778333, 1)
position = Vector2(40, 40.0002)
rotation = 0.0
scale = Vector2(-1, 1)
is_corner = true
sprite = ExtResource("8_e240q")

[node name="SnakeBody5" parent="CharacterSelection/Character0Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.62, 1, 0.778333, 1)
position = Vector2(40, -39.9998)
is_corner = true
sprite = ExtResource("8_e240q")

[node name="SnakeBody6" parent="CharacterSelection/Character0Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.62, 1, 0.778333, 1)
position = Vector2(-40, -39.9998)
sprite = ExtResource("9_8n28k")

[node name="SnakeBody7" parent="CharacterSelection/Character0Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.62, 1, 0.778333, 1)
position = Vector2(-120, -39.9998)
sprite = ExtResource("9_8n28k")

[node name="SnakeBody8" parent="CharacterSelection/Character0Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.62, 1, 0.778333, 1)
position = Vector2(-200, -39.9998)
sprite = ExtResource("9_8n28k")

[node name="Character0Area" type="Area2D" parent="CharacterSelection"]
position = Vector2(1120, 600)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacterSelection/Character0Area"]
polygon = PackedVector2Array(400, 79.9998, 0, 79.9998, 0, -0.000244141, -240, -0.000244141, -240, -80.0002, 80, -80.0002, 80, -0.000244141, 400, -0.000244141)

[node name="Character1Select" type="TileMapLayer" parent="CharacterSelection"]
position = Vector2(1040, 520)
tile_map_data = PackedByteArray("AAAAAAEAAAABAAMAAAD//wEAAAABAAAAAAD+/wEAAAABAAAAAAD+////AAABAAAAAAD/////AAABAAAAAAAAAP//AAABAAMAAAD9/wAAAAACAAEAAAD9/wEAAAAAAAMAAAD9////AAAAAAAAAAA=")
tile_set = SubResource("TileSet_gcf2c")
script = ExtResource("5_id3bs")

[node name="Path2D" type="Path2D" parent="CharacterSelection/Character1Select"]
position = Vector2(-880, -560)
curve = SubResource("Curve2D_8n28k")

[node name="HeadFollow" type="PathFollow2D" parent="CharacterSelection/Character1Select/Path2D"]
position = Vector2(920, 520)
progress = 720.0

[node name="Head" type="Sprite2D" parent="CharacterSelection/Character1Select/Path2D/HeadFollow"]
z_index = 11
z_as_relative = false
rotation = 1.5708
texture = ExtResource("11_qmlj8")

[node name="TailFollow" type="PathFollow2D" parent="CharacterSelection/Character1Select/Path2D"]
position = Vector2(920, 680)
rotation = 3.14159
progress = 80.0

[node name="Tail" type="Sprite2D" parent="CharacterSelection/Character1Select/Path2D/TailFollow"]
z_index = 11
z_as_relative = false
rotation = 1.5708
texture = ExtResource("12_e240q")

[node name="SnakeBody0" parent="CharacterSelection/Character1Select" instance=ExtResource("8_r0x8f")]
position = Vector2(40, 120)
sprite = ExtResource("13_dbhad")
char_id = 1

[node name="SnakeBody1" parent="CharacterSelection/Character1Select" instance=ExtResource("8_r0x8f")]
position = Vector2(-40, 120)
sprite = ExtResource("13_dbhad")
char_id = 1

[node name="SnakeBody2" parent="CharacterSelection/Character1Select" instance=ExtResource("8_r0x8f")]
position = Vector2(-120, 120)
sprite = ExtResource("13_dbhad")
char_id = 1

[node name="SnakeBody3" parent="CharacterSelection/Character1Select" instance=ExtResource("8_r0x8f")]
position = Vector2(-200, 120)
rotation = 0.0
scale = Vector2(-1, 1)
is_corner = true
sprite = ExtResource("14_5x28t")
char_id = 1

[node name="SnakeBody4" parent="CharacterSelection/Character1Select" instance=ExtResource("8_r0x8f")]
position = Vector2(-200, 40)
rotation = 0.0
sprite = ExtResource("13_dbhad")
char_id = 1

[node name="SnakeBody5" parent="CharacterSelection/Character1Select" instance=ExtResource("8_r0x8f")]
position = Vector2(-200, -40)
scale = Vector2(1, -1)
is_corner = true
sprite = ExtResource("14_5x28t")
char_id = 1

[node name="SnakeBody6" parent="CharacterSelection/Character1Select" instance=ExtResource("8_r0x8f")]
position = Vector2(-120, -40)
rotation = 1.5708
sprite = ExtResource("13_dbhad")
char_id = 1

[node name="SnakeBody7" parent="CharacterSelection/Character1Select" instance=ExtResource("8_r0x8f")]
position = Vector2(-40, -39.9998)
rotation = -4.71239
sprite = ExtResource("13_dbhad")
char_id = 1

[node name="SnakeBody8" parent="CharacterSelection/Character1Select" instance=ExtResource("8_r0x8f")]
position = Vector2(40, -40)
rotation = -4.71239
sprite = ExtResource("13_dbhad")
char_id = 1

[node name="Character1Area" type="Area2D" parent="CharacterSelection"]
position = Vector2(1200, 520)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacterSelection/Character1Area"]
polygon = PackedVector2Array(-320, -0.000244141, -320, 79.9998, -80, 79.9998, -80, 160, -400, 160, -400, -80.0002, -80, -80.0002, -80, -0.000244141)

[node name="Character2Select" type="TileMapLayer" parent="CharacterSelection"]
position = Vector2(1280, 520)
tile_map_data = PackedByteArray("AAAAAP//AAAAAAIAAAD//wAAAAAAAAMAAAAAAAAAAAACAAIAAAD/////AAACAAAAAAD+////AAAAAAMAAAD+//7/AAACAAAAAAD9//7/AAABAAAAAAD8//7/AAABAAAAAAD7//7/AAABAAIAAAA=")
tile_set = SubResource("TileSet_gcf2c")
script = ExtResource("5_id3bs")

[node name="Path2D" type="Path2D" parent="CharacterSelection/Character2Select"]
position = Vector2(-880, -560)
curve = SubResource("Curve2D_iej5p")

[node name="HeadFollow" type="PathFollow2D" parent="CharacterSelection/Character2Select/Path2D"]
position = Vector2(520, 440)
rotation = 3.14159
progress = 720.0

[node name="Head" type="Sprite2D" parent="CharacterSelection/Character2Select/Path2D/HeadFollow"]
z_index = 11
z_as_relative = false
rotation = 1.5708
texture = ExtResource("6_b3er0")

[node name="TailFollow" type="PathFollow2D" parent="CharacterSelection/Character2Select/Path2D"]
position = Vector2(920, 520)
rotation = 1.5708
progress = 80.0

[node name="Tail" type="Sprite2D" parent="CharacterSelection/Character2Select/Path2D/TailFollow"]
z_index = 11
z_as_relative = false
rotation = 1.5708
texture = ExtResource("7_qmlj8")

[node name="SnakeBody0" parent="CharacterSelection/Character2Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.843237, 0.615535, 0.848956, 1)
position = Vector2(40, -40)
rotation = -3.14159
sprite = ExtResource("9_8n28k")

[node name="SnakeBody1" parent="CharacterSelection/Character2Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.843237, 0.615535, 0.848956, 1)
position = Vector2(40, 40)
scale = Vector2(-1, 1)
is_corner = true
sprite = ExtResource("8_e240q")

[node name="SnakeBody2" parent="CharacterSelection/Character2Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.843237, 0.615535, 0.848956, 1)
position = Vector2(-40, 40)
rotation = -6.28319
scale = Vector2(-1, 1)
is_corner = true
sprite = ExtResource("8_e240q")

[node name="SnakeBody7" parent="CharacterSelection/Character2Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.843237, 0.615535, 0.848956, 1)
position = Vector2(-40, -39.9998)
is_corner = true
sprite = ExtResource("8_e240q")

[node name="SnakeBody8" parent="CharacterSelection/Character2Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.843237, 0.615535, 0.848956, 1)
position = Vector2(-120, -40)
rotation = 0.0
scale = Vector2(-1, 1)
is_corner = true
sprite = ExtResource("8_e240q")

[node name="SnakeBody3" parent="CharacterSelection/Character2Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.843237, 0.615535, 0.848956, 1)
position = Vector2(-120, -120)
is_corner = true
sprite = ExtResource("8_e240q")

[node name="SnakeBody4" parent="CharacterSelection/Character2Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.843237, 0.615535, 0.848956, 1)
position = Vector2(-200, -120)
sprite = ExtResource("9_8n28k")

[node name="SnakeBody5" parent="CharacterSelection/Character2Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.843237, 0.615535, 0.848956, 1)
position = Vector2(-280, -120)
rotation = -7.85398
sprite = ExtResource("9_8n28k")

[node name="SnakeBody6" parent="CharacterSelection/Character2Select" instance=ExtResource("8_r0x8f")]
self_modulate = Color(0.843237, 0.615535, 0.848956, 1)
position = Vector2(-360, -120)
rotation = 4.71239
sprite = ExtResource("9_8n28k")

[node name="Character2Area" type="Area2D" parent="CharacterSelection"]
position = Vector2(1200, 520)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacterSelection/Character2Area"]
polygon = PackedVector2Array(160, 79.9998, 0, 79.9998, 0, -0.000244141, -80, -0.000244141, -80, -80.0002, -320, -80.0002, -320, -160, 0, -160, 0, -80.0002, 160, -80.0002)

[connection signal="pressed" from="NewRun" to="." method="_on_new_run_pressed"]
[connection signal="mouse_entered" from="CharacterSelection/Character0Area" to="CharacterSelection" method="_on_area_0_mouse_entered"]
[connection signal="mouse_exited" from="CharacterSelection/Character0Area" to="CharacterSelection" method="_on_area_0_mouse_exited"]
[connection signal="mouse_entered" from="CharacterSelection/Character1Area" to="CharacterSelection" method="_on_area_1_mouse_entered"]
[connection signal="mouse_exited" from="CharacterSelection/Character1Area" to="CharacterSelection" method="_on_area_1_mouse_exited"]
[connection signal="mouse_entered" from="CharacterSelection/Character2Area" to="CharacterSelection" method="_on_area_2_mouse_entered"]
[connection signal="mouse_exited" from="CharacterSelection/Character2Area" to="CharacterSelection" method="_on_area_2_mouse_exited"]
